--- a/实验报告/高校信息管理系统.md
+++ b/实验报告/高校信息管理系统.md
@@ -11,7 +11,7 @@
   - 互动环境：LUG GitLab [仓库地址](https://git.lug.ustc.edu.cn/database/1st-project)
   - 测试环境：POSTMAN
   - 部署环境：系统：CentOS8.0 服务器：阿里云
-  - 后端框架：Spring MVC+SpringBoot+MyRedis
+  - 后端框架：Spring MVC+SpringBoot+MyBatis
   - 前端框架：Lay UI+JQuery
   - 数据库：MySQL
   
