--- a/实验报告/高校信息管理系统.md
+++ b/实验报告/高校信息管理系统.md
@@ -17,7 +17,7 @@
   
 - 实验结果：系统设计测试完成之后，打包发布到：[高校信息管理系统](http://catchersun.cn:8080/) 
 
-  但是由于服务器和框架版本问题，转专业页面的功能在服务器端不能完全实现。本地都是完全正确的。
+  但是由于服务器和框架版本问题，转专业页面的功能在服务器端不能完全实现。本地都是完全正确的。--已修复，原因是member是MySQL关键字冲突
 
 - 部署过程：本地部署，先导入Lab3.sql,再导入test.sql；用IntelliJ IDEA或者其他IDE打开文件，稍等片刻下载依赖；依赖下载完成之后，点击运行，默认路径为localhost:8080/;或者Spring Initialize等IDE或VsCode这类文本编辑器也有对应的安装教程；服务器部署：利用Maven 将项目打包成一个Jar 包，服务器端 `nohup java -jar demo-0.0.1-SNAPSHOT.jar &`  即可让项目在后台一直运行。
 
